--- a/GitTest/Base.lproj/Main.storyboard
+++ b/GitTest/Base.lproj/Main.storyboard
@@ -20,14 +20,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fWy-ge-gIg">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="bf1-ke-K3d"/>
                                 </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="aBI-q2-neJ">
-                                <rect key="frame" x="0.0" y="56" width="375" height="611"/>
+                                <rect key="frame" x="0.0" y="76" width="375" height="591"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="gitcell" rowHeight="107" id="tFA-tW-exP" customClass="RepoCell" customModule="GitTest" customModuleProvider="target">
@@ -132,7 +132,7 @@
                                 </connections>
                             </tableView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xSX-1m-bMr">
-                                <rect key="frame" x="152.5" y="326.5" width="70" height="70"/>
+                                <rect key="frame" x="152.5" y="336.5" width="70" height="70"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.44001498287671231" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="coK-GS-DXo"/>
@@ -140,7 +140,7 @@
                                 </constraints>
                             </view>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="wbU-aJ-F6q">
-                                <rect key="frame" x="169" y="343" width="37" height="37"/>
+                                <rect key="frame" x="169" y="353" width="37" height="37"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -150,7 +150,7 @@
                             <constraint firstItem="xSX-1m-bMr" firstAttribute="centerY" secondItem="wbU-aJ-F6q" secondAttribute="centerY" id="AQF-dA-j0P"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fWy-ge-gIg" secondAttribute="trailing" id="DgN-sb-bqS"/>
                             <constraint firstItem="xSX-1m-bMr" firstAttribute="centerX" secondItem="wbU-aJ-F6q" secondAttribute="centerX" id="Iq8-4X-sho"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="fWy-ge-gIg" secondAttribute="top" constant="20" id="OLO-2r-gGk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="fWy-ge-gIg" secondAttribute="top" id="OLO-2r-gGk"/>
                             <constraint firstItem="fWy-ge-gIg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ol8-U7-0QT"/>
                             <constraint firstAttribute="bottom" secondItem="aBI-q2-neJ" secondAttribute="bottom" id="TNv-2n-mpj"/>
                             <constraint firstItem="wbU-aJ-F6q" firstAttribute="centerY" secondItem="aBI-q2-neJ" secondAttribute="centerY" id="ZEu-xj-2TE"/>
